--- a/components/custLogin.html
+++ b/components/custLogin.html
@@ -30,8 +30,9 @@
     <body>
         <div id="root"></div>
         <script type="text/babel" charset="utf-8">
-            //Function-based component that returns "Hello"
+            //Class-based component that returns login
                class Login extends React.Component{
+
                     render(){
                         return <div>
                             <h1>{this.props.title}</h1>
